<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_infos"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_infos_map"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:focusableInTouchMode="true"
                android:scaleType="fitXY"
                android:src="@drawable/unknown_map" />

            <View
                android:id="@+id/nav_draw_divider"
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:layout_below="@id/imageView_infos_map"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView_infos_image_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/loading_image_text" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView_infos_map"
                android:background="#FFFFFF"
                android:padding="@dimen/fragment_base_padding"
                tools:context=".MainActivity$PlaceholderFragment">

                <ProgressBar
                    android:id="@+id/progressBar_infos"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="@dimen/progressBar_spinner_width"
                    android:layout_height="@dimen/progressBar_spinner_width"
                    android:layout_alignTop="@+id/listView_infos"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@+id/textView_infos_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/text_infos_map"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView_infos_players"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView_infos_map"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_infos_player"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


                <ListView
                    android:id="@+id/listView_infos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView_infos_map"
                    android:layout_below="@+id/textView_infos_players"
                    android:layout_marginTop="15dp" />


                <TextView
                    android:id="@+id/textView_mapchange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/text_mapchange"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/textView_info_noconnection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_connection_text"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"
                    android:visibility="invisible"/>


            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>